# python-boilerplate

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/boilerplate/: index.html
docs/: index.md
docs/api/: boilerplate.md
python_boilerplate/: __init__.py  main.py
search/: search_index.json
src/: boilerplate.py
tests/: test_main.py
