[project]
name = "boilerplate"
version = "0.1.0"
description = "Python boilerplate with uv, CI, linting, and tests"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [

    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
