[project]
name = "boilerplate"
version = "0.1.0"
description = "Python boilerplate with uv, CI, linting, and tests"
requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra -q",
    "--cov=python_boilerplate",
    "--cov-report=term-missing",
    "--cov-fail-under=50",]